--- a/app/src/main/res/layout/activity_deal.xml
+++ b/app/src/main/res/layout/activity_deal.xml
@@ -59,8 +59,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="72dp"
-        android:layout_height="62dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/text_margin_standard"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="@dimen/text_margin_standard"
